--- a/475 Assignment 1.html
+++ b/475 Assignment 1.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+html lang="en">
 <head>
 <title>Assignment One</title>
 <h2>Eric Diaz</h2>
 </head>
 <body>
 Hello, I am an OMIS major with a minor in Business Analytics. My expected graduation data is Decemeber of 2019.
+<a href="Assignment 1 part 2.html">Assignment One</a>
+<a href="blockquote2">Assignment 2</a>
 </body>
 </head>
