--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 html lang="en">
 <head>
-<title>Assignment One</title>
+<title>OMIS 475</title>
+  
 <h2>Eric Diaz</h2>
+  
 </head>
 <body>
 Hello, I am an OMIS major with a minor in Business Analytics. My expected graduation data is Decemeber of 2019.
-<a href="Assignment 1 part 2.html">Assignment One</a>
-<a href="blockquote2">Assignment 2</a>
 </body>
 </head>
+<a href="Assignment 1 part 2.html">Assignment One</a>
+<a href="blockquote2">Assignment 2</a>
