--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="Assignment 1 part 2.html">Assignment One</a>
 <a href="blockquote2">Assignment 2</a>
 <a href="BG2.html">Assignment 3 Question 5</a>
-<a href=Diaz.html">Assignment 3 Question 8 </a>
+<a href="Diaz.html">Assignment 3 Question 8 </a>
