--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 </head>
 <a href="Assignment 1 part 2.html">Assignment One</a>
 <a href="blockquote2.html">Assignment 2</a>
-<a href="BG2.html">Assignment 3 Question 5</a>
-<a href="Diaz.html">Assignment 3 Question 8 </a>
+<a href="BG2.html">Assignment Three Question 5</a>
+<a href="Diaz.html">Assignment Three Question 8</a>
