--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="blockquote2.html">Assignment 2</a>
 <a href="BG2Eric.html">Assignment Three Question 5</a>
 <a href="Diaz.html">Assignment Three Question 8</a>
+<a href="Assignment 5.html"> Assignment 5 Question 10</a>
