--- a/index.html
+++ b/index.html
@@ -15,3 +15,5 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="BG2Eric.html">Assignment Three Question 5</a>
 <a href="Diaz.html">Assignment Three Question 8</a>
 <a href="Assignment 5.html"> Assignment 5 Question 10</a>
+<a href="Spring.html"> Assignment 6 Spring</a>
+<a href='Summer.html"> Assignment 6 Summer</a>
