--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="Mockup.bmpr"> Web Presence Mockup</a>
 <a href="sport8.html"> Chapter 8 question 6</a>
 <a href="band8.html"> Chapter 8 question 8</a>
+<a href="Form.html"> Chapter 8 #3<a/>
