--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="Assignment 5.html"> Assignment 5 Question 10</a>
 <a href="Spring.html"> Assignment 6 Spring</a>
 <a href="Summer.html"> Assignment 6 Summer</a>
-<a href="Mockup.bmpr"> Web Presence Mockup</a>
+<a href="Mockup.pdf"> Web Presence Mockup</a>
 <a href="Home.html"> Web Presence</a>
 <a href="sport8.html"> Chapter 8 question 6</a>
 <a href="band8.html"> Chapter 8 question 8</a>
