--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="Spring.html"> Assignment 6 Spring</a>
 <a href="Summer.html"> Assignment 6 Summer</a>
 <a href="Mockup.pdf"> Web Presence Mockup</a>
-<a href="Home.html"> Web Presence</a>
+<a href="home.html"> Web Presence</a>
 <a href="sport8.html"> Chapter 8 question 6</a>
 <a href="band8.html"> Chapter 8 question 8</a>
 <a href="Form.html"> Chapter 8 #3<a/>
