--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="sport8.html"> Chapter 8 question 6</a>
 <a href="band8.html"> Chapter 8 question 8</a>
 <a href="Form.html"> Chapter 8 #3<a/>
-<a href="Chapter 11 #2.html"> Chapter 11<a/>
+<a href="Chapter11.html"> Chapter 11 #2<a/>
 <a href="Video11.html"> Chapter 11 Video<a/>
