--- a/index.html
+++ b/index.html
@@ -24,3 +24,5 @@ Hello, I am an OMIS major with a minor in Business Analytics. My expected gradua
 <a href="Form.html"> Chapter 8 #3<a/>
 <a href="Chapter11.html"> Chapter 11 #2<a/>
 <a href="Video11.html"> Chapter 11 Video<a/>
+<a href="Proposal.docx"> Group Project Proposal<a/>
+<a href="Groupproject.pdf"> Group Project Mockup<a/>
